[tool.poetry]
name = "test-audiostorageservice"
version = "0.1.0"
description = ""
authors = ["NormanwOw <normjkeee@vk.com>"]
readme = "README.md"
packages = [{include = "test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
pydantic-settings = "^2.8.1"
flake8 = "^7.1.2"
flake8-print = "^5.0.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
pre-commit = "^4.2.0"
aiohttp = "^3.11.14"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
